hphp/hack/test/typecheck/inout/bad_inout_use_lvalue7.php.exp
File "bad_inout_use_lvalue7.php", line 9, characters 7-23:
You cannot decorate this argument as inout (Parsing[1002])
File "bad_inout_use_lvalue7.php", line 9, characters 13-23:
->: operator is not allowed in write context (Parsing[1002])
File "bad_inout_use_lvalue7.php", line 9, characters 13-24:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
