hphp/hack/test/typecheck/inout/bad_inout_use_lvalue7.php
<?hh // strict

function f(inout int $i): void {}

class :x:foo extends XHPTest {
  attribute int attr @required;

  public function test(): void {
    f(inout $this->:attr);
  }
}
